# Resume_Analyzer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/resume_optimisation/: crew.py  main.py  models.py
src/resume_optimisation/config/: agents.yaml  tasks.yaml
src/resume_optimisation/utils/: extract_document.py
